# BD-project

./: ER-finale.drawio  ER-videocassette(2).drawio  ER-videocassette(3).drawio  Noleggio-finale2.mwb  README.md  Sistema_noleggio.mwb  Specifiche progetto BD.docx  db-Rental.sql  final-db.sql  final-example-airport - collegamento.lnk  insert-final-data.sql  template-progetto.docx  template-progetto.odt
.github/workflows/: codeql-analysis.yml
Sistema di noleggio film/: CMakeLists.txt  Makefile  main.c  rental_sys
Sistema di noleggio film/controller/: cliente.c  cliente.h  impiegato.c  impiegato.h  login.c  login.h  manager.c  manager.h
Sistema di noleggio film/model/: db.c  db.h
Sistema di noleggio film/utils/: db.c  db.h  io.c  io.h  validation.c  validation.h
Sistema di noleggio film/view/: cliente.c  cliente.h  impiegato.c  impiegato.h  login.c  manager.c  manager.h
